--- a/index.html
+++ b/index.html
@@ -22,30 +22,38 @@ href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Portfolio<span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="#">Portfolio<span class="sr-only">(curent)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact<span class="sr-only">(current)</span></li></a>
             </li>
           </ul>
         </div>
       </nav>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
       <div class="container">
         <div class="row">
-            <div class="col-2">
-            <h1 class="mb-5"></h1>
-              <img class="img img-thumbnail" src="http://placehold.it/150x150" />
-            </div>
-            <div class="col-6">
-                <h2 class="mb-5"></h2>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae cumque corporis quis
-                sed, quod pariatur! Officia aut tempore repellendus, culpa inventore magnam accusamus
-                nemo fugiat debitis voluptates ratione omnis, nobis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit explicabo molestias modi quae quidem possimus repudiandae nihil! A iusto incidunt recusandae eius numquam ipsa enim necessitatibus officia, quisquam sequi omnis!
-              </p>
+            <div class="col-3">
+              <h2 id="anchor">About Me</h2>
+              <br>
             </div>
       </div>
+      <div class="row">
+        <div class="col">
+
+          <img src= "https://placehold.it/350x350">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos saepe non, sunt dolor, ipsam iure necessitatibus pariatur corrupti incidunt ea veniam reprehenderit, nam ratione fugit officiis nesciunt voluptatem sint sed. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur ut eveniet, illum sed facilis corporis expedita, quam ullam laboriosam earum consequatur reiciendis numquam veniam soluta. Blanditiis distinctio consectetur aspernatur incidunt?</p>
+        </div>
+      </div>
+ 
     
 </body>
 </html>
