--- a/index.html
+++ b/index.html
@@ -1,59 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trevor Hammersley-Frazer</title>
-
-    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" /> 
-<link
-rel="stylesheet"
-href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title></title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="normalize.css">
 </head>
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Trevor Hammersley-Frazer</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio<span class="sr-only">(curent)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact<span class="sr-only">(current)</span></li></a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <div class="container">
-        <div class="row">
-            <div class="col-3">
-              <h2 id="anchor">About Me</h2>
-              <br>
-            </div>
-      </div>
-      <div class="row">
-        <div class="col">
 
-          <img src= "https://placehold.it/350x350">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos saepe non, sunt dolor, ipsam iure necessitatibus pariatur corrupti incidunt ea veniam reprehenderit, nam ratione fugit officiis nesciunt voluptatem sint sed. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur ut eveniet, illum sed facilis corporis expedita, quam ullam laboriosam earum consequatur reiciendis numquam veniam soluta. Blanditiis distinctio consectetur aspernatur incidunt?</p>
+    <header>
+
+        <div class="container-fluid p-0">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand">Your Name</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <div class="mr-auto"></div>
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="index.html">About Me <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </div>
-      </div>
- 
-    
+    </header>
+
+    <div class="contianer text-center">
+        <div class="row">
+            <div class="col-md-7 col-sm-12">
+            </div>
+            <div class="col-md-5 col-sm-12">
+            </div>
+        </div>
+    </div>
+
+    <main>
+        <section class="section1">
+
+            <div class="container text-centre">
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="me">
+                            <br>
+                            <br>
+                            <br>
+                        </div>
+                    </div>
+                    <div class="col-auto">
+                        <div class="panel text-left">
+                            <br>
+                            <br>
+                            <h1>About Me</h1>
+                            <br>
+                            <br>
+                            <img src="C:\Users\user\Desktop\assets\homedog.jpg" class="img-fluid"
+                                alt="Responsive image of my dog">
+                            <p class="pt-4">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Pariatur eaque temporibus aspernatur cum, quod recusandae tenetur,
+                                id sequi laborum aliquid neque et? Provident non, voluptatibus iusto assumenda
+                                laudantium aliquam.
+                                Recusandae ullam iste tenetur libero quod sint maxime, error, pariatur,
+                                quam exercitationem hic omnis repellat veritatis magnam molestias quibusdam vero cumque.
+                            </p>
+
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Sit, minus voluptatibus nobis voluptatum eius facere?
+                                Consequuntur officia odit praesentium est hic accusamus,
+                                quo quia provident impedit voluptatum! Sunt aut nesciunt similique beatae.
+                                Alias fuga at consectetur quod, iste nesciunt voluptatum eveniet explicabo atque sint
+                                reprehenderit nobis.
+                                Nostrum dolor et exercitationem?
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="section2 container-fluid p-0">
+            </div>
+            </div>
+        </section>
+    </main>
+    <footer></footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
+
+
 </body>
+
 </html>
