--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
                             <h1>About Me</h1>
                             <br>
                             <br>
-                            <img src="C:\Users\user\Desktop\assets\homedog.jpg" class="img-fluid"
-                                alt="Responsive image of my dog">
+                            <img src="homedog.jpg" class="img-fluid" alt="Responsive image of my dog">
                             <p class="pt-4">
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                 Pariatur eaque temporibus aspernatur cum, quod recusandae tenetur,
