--- a/portfolio.html
+++ b/portfolio.html
@@ -2,11 +2,17 @@
 <html lang="en">
 
 <head>
+    <style>
+        .navbar-brand {
+            background-color: green;
+
+        }
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Trevor Hammersley-Frazer</title>
+    <title>THF</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
@@ -74,8 +80,8 @@
                                         <div class="row row-cols-1 row-cols-md-2">
                                             <div class="col mb-4">
                                                 <div class="card">
-                                                    <img src="C:\Users\user\Desktop\assets\raincoatdog.jpg"
-                                                        class="card-img-top" alt="Dog in a raincoat">
+                                                    <img src="assets\raincoatdog.jpg" class="card-img-top"
+                                                        alt="Dog in a raincoat">
                                                     <div class="card-body">
                                                         <h5 class="card-title"></h5>
                                                     </div>
@@ -83,8 +89,8 @@
                                             </div>
                                             <div class="col mb-4">
                                                 <div class="card">
-                                                    <img src="C:\Users\user\Desktop\assets\raincoatdog.jpg"
-                                                        class="card-img-top" alt="Dog in a raincoat">
+                                                    <img src="assets\raincoatdog.jpg""
+                                                        class=" card-img-top" alt="Dog in a raincoat">
                                                     <div class="card-body">
                                                         <h5 class="card-title"></h5>
                                                     </div>
@@ -92,8 +98,8 @@
                                             </div>
                                             <div class="col mb-4">
                                                 <div class="card">
-                                                    <img src="C:\Users\user\Desktop\assets\raincoatdog.jpg"
-                                                        class="card-img-top" alt="Dog in a raincoat">
+                                                    <img src="assets\raincoatdog.jpg" class="card-img-top"
+                                                        alt="Dog in a raincoat">
                                                     <div class="card-body">
                                                         <h5 class="card-title"></h5>
                                                     </div>
@@ -101,8 +107,8 @@
                                             </div>
                                             <div class="col mb-4">
                                                 <div class="card">
-                                                    <img src="C:\Users\user\Desktop\assets\raincoatdog.jpg"
-                                                        class="card-img-top" alt="Dog in a raincoat">
+                                                    <img src="assets\raincoatdog.jpg" class="card-img-top"
+                                                        alt="Dog in a raincoat">
                                                     <div class="card-body">
                                                         <h5 class="card-title"></h5>
                                                     </div>
@@ -110,8 +116,8 @@
                                             </div>
                                             <div class="col mb-4">
                                                 <div class="card">
-                                                    <img src="C:\Users\user\Desktop\assets\raincoatdog.jpg"
-                                                        class="card-img-top" alt="Dog in a raincoat">
+                                                    <img src="assets\raincoatdog.jpg" class="card-img-top"
+                                                        alt="Dog in a raincoat">
                                                     <div class="card-body">
                                                         <h5 class="card-title">Send Help</h5>
                                                     </div>
