--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
 
 <head>
+    <style>
+        .navbar-brand {
+            background-color: green;
+
+        }
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title></title>
+    <title>THF</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
@@ -70,7 +76,7 @@
                             <h1>About Me</h1>
                             <br>
                             <br>
-                            <img src="homedog.jpg" class="img-fluid" alt="Responsive image of my dog">
+                            <img src="assets\homedog.jpg" class="img-fluid" alt="Responsive image of my dog">
                             <p class="pt-4">
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                 Pariatur eaque temporibus aspernatur cum, quod recusandae tenetur,
