--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <style>
         .navbar-brand {
             background-color: green;
+            width: 9%;
+            font-size: 75px;
 
+
+        }
+
+        img {
+            width: 50%;
+            height: auto;
         }
     </style>
     <meta charset="UTF-8">
