--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,11 @@
             background-color: green;
 
         }
+
+        img {
+            width: 35%;
+            height: auto;
+        }
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
